tests/fail/not_openapitype.stderr
error[E0277]: the trait bound `Bar: OpenapiType` is not satisfied
 --> tests/fail/not_openapitype.rs:5:7
  |
5 |     bar: Bar
  |          ^^^ the trait `OpenapiType` is not implemented for `Bar`
  |
  = help: the following other types implement trait `OpenapiType`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
